--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -16,8 +16,8 @@
 -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="com.noshufou.android.su"
-      android:versionCode="34"
-      android:versionName="3.0-beta4">
+      android:versionCode="35"
+      android:versionName="3.0">
     <application android:label="@string/app_name"
         android:icon="@drawable/icon"
         android:logo="@drawable/title_logo"
